--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -18,7 +18,7 @@
 ზოგჯერ შეცდომით '''ნაგაზს''' „ქართულ ნაგაზს“ უწოდებენ (სხვა ნაგაზი ქართულის გარდა არ არსებობს), ხოლო - '''გერმანულ მეცხვარულ ძაღლს''' კი ასევე შეცდომით უწოდებენ „'''გერმანულ ნაგაზს'''“ (ანუ „ნაგაზით“ ცვლიან „მეცხვარულ ძაღლს“). 
 
 
-ნაგაზი ზოგადად განეკუთვნება „მოლოსების“ ანუ „ალპიური მეცხვარული ძაღლების“ დიდ ოჯახს და არსებითი მოსაზრებით იგი გავრცელდა მეცხვარეობის გავრცელებასთან ერთად - როგორც დარგის აუცილებელი და განუყოფელი უზრუნველმყოფი ატრიბუტი. ევროპის მთელს მთიანეთში დაწყებული ესპანეთიდან და ბასკეთიდან და დასრულებული კავკასიით ყველგან გვხვდება ძალზე მსგავსი, ფრიად მონათესავე მეცხვარული ძაღლები. შედარებით უფრო განსხვავებული ქვეჯიში ვრცელდება აღმოსავლეთი კასპიისპირეთის მთიანეთებიდან ინდოჩინეთის მთიანეთების ჩათვლით.
+ნაგაზი ზოგადად განეკუთვნება [http://www.molosserdogs.com/modules.php?name=Encyclopedia&op=content&tid=1224 „მოლოსების“] ანუ „ალპიური მეცხვარული ძაღლების“ დიდ ოჯახს და არსებითი მოსაზრებით იგი გავრცელდა მეცხვარეობის გავრცელებასთან ერთად - როგორც დარგის აუცილებელი და განუყოფელი უზრუნველმყოფი ატრიბუტი. ევროპის მთელს მთიანეთში დაწყებული ესპანეთიდან და ბასკეთიდან და დასრულებული კავკასიით ყველგან გვხვდება ძალზე მსგავსი, ფრიად მონათესავე მეცხვარული ძაღლები. შედარებით უფრო განსხვავებული ქვეჯიში ვრცელდება აღმოსავლეთი კასპიისპირეთის მთიანეთებიდან ინდოჩინეთის მთიანეთების ჩათვლით.
 
 
 განსხვავებით ზოგიერთი ევროპული მეცხვარული ძაღლებისაგან (მაგ. „კოლის“ ტიპისა - რომლებიც ვერ ებრძვიან მგელს), ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად (ანუ გასადენად და შესაგროვებლად, მოსაქუჩებლად), არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ელვის სისწრაფით ყელს ღადრავს 5-12 ცხვარს). აღნუსხულია შემთხვევები, როდესაც რამდენიმე მგელს ერთ ღამეში ასობით ცხვარი გაუწყვეტიათ. ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის განსაკუთრებულ სამეურნეო ფასეულობაზე მეცხვარულ სოციუმში.
