--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -2,7 +2,7 @@
 ===ეტიმოლოგია===
 
 [[სურათი:Aborigenuli_nagazebi.jpg|thumb|ხალასსისხლიანი აბორიგენული ნაგაზები]]
-'''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი, „გვარიანი“ და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია. 
+'''ნაგაზი''' [[ორბელიანი, სულხან-საბა|სულხან საბა ორბელიანის]] განმარტებით არის განსაკუთრებით დიდი, „გვარიანი“ და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია. 
 
 
 ნაგაზის (ზოგჯერ ზოგადად ძაღლის) გავრცელებული სინონიმებია „ცუგა“, „ცუგო“ და (თუშური) „ტუგა“, „ტუგო“. უნდა საგანგებოდ აღინიშნოს, რომ ისტორიულად საქართველოს მთიანეთში ხალასსისხლიანი ნაგაზი ერთად-ერთი და არსებითად გაბატონებული ძაღლის ჯიში იყო - რამდენადაც საკვების სიმცირის პირობებში უჯიშო ძაღლის შენახვა გამართლებული არ იყო (განსხვავებით მცირერიცხვოვანი „ბაშკიებისაგან“, უჯიშო, მოხეტიალე ძაღლებისაგან, რომლებიც ადრე თუ გვიან მგლების წერა ხდებოდნენ). „ქოფაკი“ თურქულად ძაღლს ნიშნავს (ქართულად უმეტესად ავ ძაღლს) და ზოგჯერ გამოიყენება სამხრეთ საქართველოში „ნაგაზის“ ნაცვლად.
@@ -106,3 +106,6 @@
 
 (სტატია დამუშავების პროცესშია)
 --[[მომხმარებელი:Bpg|ბპგ]] 07:37, 4 აპრილი 2006 (UTC)
+
+
+[[კატეგორია:ძაღლები]]
