--- a/თეთრი_ბუ.mw
+++ b/თეთრი_ბუ.mw
@@ -1,10 +1,7 @@
 [[სურათი:535px-Snowy.owl.overall.arp.750pix.jpg|thumb|right|თეთრი ბუ ♀]]
 '''თეთრი ბუ''' (Nyctea scandiaca), [[ფრინველები|ფრინველი]] ნამდვილ [[ბუსნაირნი|ბუსებრთა]] ოჯახისა. გავრცელებულია ჩრდილოეთ ამერიკის, ევროპისა და აზიის ტუნდრის ზონაში და ჩრდილოეთ ყინულოვანი ოკეანის ზოგიერთ კუნძულზე. მომთაბარეა, ზამთარში ველების ზონამდე ინაცვლებს. თეთრ ბუმბულზე მეტ-ნაკლებად შესამჩნევი მურა ლაქები აქვს. მისი სხეულის სიგრძეა 55-65 სმ, [[ფრთები|ფრთების]] შლილი - 150-160 სმ, წონა - 1,5-2,5 კგ. კვერცხებს (3-11) დებს მაისის შუა ან ბოლო რიცხვებში ხავსით ამოფენილ ორმოში. კრუხობს ერთ თვემდე. იკვებება [[ლემინგები|ლემინგებით]] და მათ რაოდენობაზეა დამოკიდებული თეთრი ბუს გამრავლების ინტენსივობაც.
 
-
 [[კატეგორია: ბუსნაირნი]]
-
-
 
 [[cs:Sovice sněžní]]
 [[da:Sneugle]]
@@ -17,6 +14,7 @@
 [[ja:シロフクロウ]]
 [[lt:Baltoji pelėda]]
 [[nl:Sneeuwuil]]
+[[no:Snøugle]]
 [[pl:Sowa śnieżna]]
 [[pt:Coruja-das-neves]]
 [[ru:Белая сова]]
