--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -23,6 +23,9 @@
 
 განსხვავებით ზოგიერთი ევროპული მეცხვარული ძაღლებისაგან (მაგ. „კოლის“ ტიპისა - რომლებიც ვერ ებრძვიან მგელს), ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად (ანუ გასადენად და შესაგროვებლად, მოსაქუჩებლად), არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ელვის სისწრაფით ყელს ღადრავს 5-12 ცხვარს). აღნუსხულია შემთხვევები, როდესაც რამდენიმე მგელს ერთ ღამეში ასობით ცხვარი გაუწყვეტიათ. ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის განსაკუთრებულ სამეურნეო ფასეულობაზე მეცხვარულ სოციუმში.
 
+
+დიდი ქართველი ეთნოგრაფის პროფ. სერგი მაკალათიას ცნობით მთაში ნაგაზის ტიპიური საკვები იყო საკლავის მოხარშული (აუცილებლად) ქვეპროდუქტები (უმეტესწილად შიგანი და ძვლები) ან დოში მოხარშული „იფქალი“ (მოხალული უხეში ფქვილი და ქატო). ზაფხულობით ნაგაზები ინტენსიურად იკვებებიან აგრეთვე მღრღნელებითა და კალიებით (ფრიად კალორიული საკვებია).
+
 ===ნაგაზის ადგილი ჯიშში===
 [[სურათი:Caucassian_Ovcharka_Topush_Georgia_1950ies.png|thumb|საბჭოთა კავკასიური მეცხვარული ძაღლის ჯიშის დამაფუძნებელი, 1950-აინი წლების მრავალგზის ჩემპიონი, ლეგენდარული „თოფუშა“ - რომელსაც ათობით მგელი ჰყავდა მოკლული]]
 [[სურათი:Nagazi_mcveli.jpg|thumb|ნაგაზი იცავს პატრონს]]
