*Empty MediaWiki Message*

--- a/სინონიმები.mw
+++ b/სინონიმები.mw
@@ -1,6 +1,6 @@
 '''სინონიმები''' (ძვ.ბერძ. სინ 'συν' = პლუს, ონომა 'όνομα' = სახელი) იდენტური მნიშვნელობის სხვადასხვა სიტყვებია და ურთიერთჩანაცვლებადია. [[ანტონიმი|ანტონიმები]] ერთმანეთის საწინააღმდეგმო მნიშვნელობის სიტყვებია. (სინონიმი და ანტონიმი ანტონიმებია).
 
-მაგ. სინონიმთა ნიმუშია სიტყვები ‘ჩვილი’ და ‘ყრმა’; ორივე განსაზღვრავს ახალშობილ ბავშვს. ასევე სინონიმებია ‘მოსწავლე’ და ‘მოწაფე’, ‘ავადმყოფი’ და ‘სნეული’, ‘ლამაზი’ და ‘მომხიბლავი’, ‘ძაღლი’ და ‘ნაგაზი’ და ა.შ.
+მაგ. სინონიმთა ნიმუშია სიტყვები ‘ჩვილი’ და ‘ყრმა’; ორივე განსაზღვრავს ახალშობილ ბავშვს. ასევე სინონიმებია ‘მოსწავლე’ და ‘მოწაფე’, ‘ავადმყოფი’ და ‘სნეული’, ‘ლამაზი’ და ‘მომხიბლავი’ და ა.შ.
 
 სინონიმები მიახლოებულ მნიშვნელობას კონტექსტის მიხედვით იძენენ და ამგვარი კონტექსტის შეცვლის შედეგად შესაძლოა შხირად სინონიმის მნიშვნელობა დაკარგონ. ამგვარად, ზოგი ლექსიკოგრაფი ამტკიცებს, რომ არ არსებობს სინონიმები რომელთაც შეიძლება ზუსტად ერთი და იგივე მნიშვნელობა ჰქონდეს ეტიმოლოგიის, ორთოგრაფიის, ფონეტიკური მახასიათებლების, ორაზროვნებისა და გამოყენების სპეციფიურობის გამო. სხვადასხვა სიტყვას, რომელთაც მსგავსი მნიშვნელობა აქვს ხშირად რაღაც მიზეზის გამო განსხვავდება. მაგ. ძაღლი უფრო საერთო მნიშვნელობისაა ვინემ ნაგაზი. სინონიმები ასევე [[ევფემიზმი|ევფემიზმების]] წყაროა.
 
