--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -112,11 +112,14 @@
 
 (სტატია დამუშავების პროცესშია)
 
-
 --[[მომხმარებელი:Bpg|ბპგ]] 07:37, 4 აპრილი 2006 (UTC)
 
 
-
-
-
 [[კატეგორია:ძაღლები]]
+
+[[de:Kaukasischer Owtscharka]]
+[[en:Caucasian Ovcharka]]
+[[fr:Berger du Caucase]]
+[[nl:Kaukasische owcharka]]
+[[pl:Owczarek kaukaski]]
+[[ru:Кавказская овчарка]]
