*Empty MediaWiki Message*

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -87,7 +87,9 @@
 * [http://www.simba.com.ge/ „სიმბა“]
 * [http://www.bombora.com.ge/ „ბომბორა“]
 
+
 ===ტერმინოლოგია და ტერმინის თარგმანი===
+[[სურათი:Cholokidze.jpg|thumb|ცნობილი თუში მომჯიშებლის ჭოლოკიძის ბავშვები და ლეკვები 2005]]
 
 * კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
 * ნაგაზი (რუს.: Нагази, ინგლ.: [http://www.google.com/search?hl=en&q=nagazi&btnG=Google+Search Nagazi])
@@ -107,8 +109,10 @@
 * პერიოდს როდესაც ძუ მზადაა განაყოფიერებისათვის ეწოდება „მძუნაობა“ („მძუნავი ძუკნა“)
 
 
+===ვიდეო მასალა===
 
-
+* [http://bpg.sytes.net/Nagazi/media/video/Caucasian_Ovcharka_film_Tushetian_Shepherd_91MB.wmv ვიდეოფილმი „თუში მეცხვარე 1-2“]]
+* [http://bpg.sytes.net/Nagazi/media/video/Caucasian_Ovcharka_film_Tushetian_Shepherd_91MB.wmv ვიდეოფილმი „თუში მეცხვარე 3“]]
 
 (სტატია დამუშავების პროცესშია)
 
