/* ტერმინოლოგია და ტერმინის თარგმანი */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -102,12 +102,11 @@
 * მგელზე შემტევ, მგლების გამანადგურებელ ნაგაზს ეწოდება „მახრჩობელა“
 * ძაღლის ლითონის საყელურს, რომელსაც აქვს ნემსები მგლის კბილებისაგან დასაცავად ეწოდება „ჩანგლები“
 * უჯიშო, შერეული სისხლის ძაღლს ეწოდება „ბაშკია“
-* ნაგაზებს ტრადიციისამებრ ყურებს აჭრიან ანუ „უცვითავენ, უცქვიტავენ“ (რათა ეს სათუთი, მტკივნეული ორგანო მგელმა არ გამოიყენოს). ბარში აგრეთვე „უკვეცავენ“ კუდს, რათა ბალანში გახვეულმა ეკალ-ბარდებმა არ შეაწუხონ.
+* ნაგაზებს ტრადიციისამებრ ყურებს აჭრიან ანუ „უცვითავენ, უცქვიტავენ“ (რათა ამ სათუთი, მტკივნეული ორგანოთი მგელმა არ დაიმორჩილოს). ბარში აგრეთვე „უკვეცავენ“ კუდს, რათა ბალანში გახვეულმა ეკალ-ბარდებმა არ შეაწუხონ.
 * „ყურშას“ უწოდებენ ნაგაზს, რომელსაც ყურები არ აქვს „დაცვეთილი“
 * „ხალასსისხლიანი“ ანუ „ჯიშიანი“ არის ძაღლი, რომელიც წინაპრების კონტროლირებადი შერჩევითაა გაჩენილი (აბორიგენული ძაღლებისათვის სულ ცოტა 3 თაობისა)
 * ხალასსისხლიანი ძაღლების მოსაშენებელ ფერმას ეწოდება „ჯიშთსანაშენე“
 * პერიოდს როდესაც ძუ მზადაა განაყოფიერებისათვის ეწოდება „მძუნაობა“ („მძუნავი ძუკნა“)
-
 
 ===ვიდეო მასალა===
 
