--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -65,7 +65,7 @@
 ნაგაზების ტრადიციული მეჯიშეები განსაკუთრებით არიან თუშები, რომელთა არსებობა მთლიანად მეცხვარეობას ეფუძნება. თუშები ტრადიციულად თავის ცხვართან ერთად მომთაბარეობდნენ საქართველოს მრავალ რეგიონსა (ელდარის იალაღები) და ჩრდილო კავკასიაში (ყიზლარის იალაღები) და ყველგან ავრცელებდნენ ნაგაზებს. 
 
 
-მეორე მსოფლიო ომისშემდგომ საქართველოში ნაგაზის ჯიშის აღდგენაზე ზრუნვა კერძო ენთუზიასტებმა დაიწყეს 70-იანი წლებიდან, როდესაც „ფაუნის მოყვარულთა კლუბმა“ გარემოს დაცვის სამინისტროს მხარდაჭერით მოეწყო ექსპედიცია საქართველოს რაიონებში ჯიშის მდგომარეობის შესასწავლად და ჩატარდა ფოტოგადაღებები და აზომვები. მოეწყო აგრეთვე საგანგებო ტელეგადაცემები და დაიბეჭდა საგაზეთო სტატიები - რომელთა მიზანი იყო ნაგაზის ჯიშის პოპულარიზება, გადარჩენა და გაუმჯობესება. ამავე პერიოდში გამოფენებზე გამოჩნდნენ პირველი აბორიგენული ნაგაზები და რუსეთიდან ჩამოჯიშებული კავკასიური მეცხვარული ძაღლები. 1970-იანი წლების თბილისის ჩემპიონებს შორის იყვნენ ხვადი „ზორბა“ და ძუკნები „ციბა“ და „ჩუკა“.
+მეორე მსოფლიო ომისშემდგომ საქართველოში ნაგაზის ჯიშის აღდგენაზე ზრუნვა კერძო ენთუზიასტებმა დაიწყეს 70-იანი წლებიდან, როდესაც „ფაუნის მოყვარულთა კლუბმა“ გარემოს დაცვის სამინისტროს მხარდაჭერით მოაწყო ექსპედიცია საქართველოს რაიონებში ჯიშის მდგომარეობის შესასწავლად და ჩაატარდა ფოტოგადაღებები და აზომვები. მოეწყო აგრეთვე საგანგებო ტელეგადაცემები და დაიბეჭდა საგაზეთო სტატიები - რომელთა მიზანი იყო ნაგაზის ჯიშის პოპულარიზება, გადარჩენა და გაუმჯობესება. ამავე პერიოდში გამოფენებზე გამოჩნდნენ პირველი აბორიგენული ნაგაზები და რუსეთიდან ჩამოჯიშებული კავკასიური მეცხვარული ძაღლები. 1970-იანი წლების თბილისის ჩემპიონებს შორის იყვნენ ხვადი „ზორბა“ და ძუკნები „ციბა“ და „ჩუკა“.
 
 
 საქართველოს დამოუკიდებლობის აღდგენის შემდგომ ნაგაზის ჯიშის აღდგენა-გაუმჯობესებაზე მუშაობა განახლდა. სამწუხაროდ, ჯიშთსანაშენეებში უპირატესად იყენებენ რუსეთიდან იმპორტირებულ კავკასიურ მეცხვარულ ძაღლებს და კვლავ ნაკლები ყურადღება ექცევა აბორიგენული გენური წყაროების გამოყენებას.
