*Empty MediaWiki Message*

--- a/ნოვოდევიჩის_მონასტერი.mw
+++ b/ნოვოდევიჩის_მონასტერი.mw
@@ -1,8 +1,10 @@
 [[სურათი:Novoleto.jpg|thumb|300px|ნოვოდევიჩის მონასტერი ზაფხულში.]]
+[[სურათი:Novodevichy zima.jpg|thumb|300px|ნოვოდევიჩის მონასტერი ზამთარში.]]
 '''ნოვოდევიჩის მონასტერი''' ასევე '''ბოგოროდიცე-სმოლენსკის მონასტერი''' (რუს.: Новоде́вичий монасты́рь, Богоро́дице-Смоле́нский монасты́рь) [[მოსკოვი|მოსკოვის]] სამხრეთ-დასავლეთში მდ. მოსკოვის ერთ-ერთ განშტოებაზე მდებარე ქალთა სამონასტრო კომლექსია. დაარსდა დიდი კნიაზი [[ვასილი III]]-ის მიერ [[1524]] წელს, რუსეთის მფლობელობაში [[სმოლენსკი|სმოლენსკის]] მიწების დაბრუნების აღსანიშნავად. აქედან მომდინარეობს მონასტერის მეორე სახელი.
 
 მოსკოვის სხვა მონასტერთაგან განსხვავებით ნოვოდევიჩის კომპლექსი ხელშეუხებელი დარჩა მე-17 საუკუნიდან. ოქტომბრის რევოლუციის შემდეგ მონასტერი გაუქმდა. 1922 წლიდან მუზეუმია (1934 წლიდან სახ. ისტორიული მუზეუმის ფილიალი). 1994 წლიდან მონასტერმა ისევე განაახლა მოქმედება. 2004 წლიდან შეტანილ იქნა იუნესკოს მსოფლიოს კულტურული მემკვიდრეობის ძეგლთა სიაში.
 
+{{ესკიზი}}
 [[კატეგორია:რუსეთის სამონასტრო კომპლექსები]]
 [[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
