*Empty MediaWiki Message*

--- a/ყაზანი.mw
+++ b/ყაზანი.mw
@@ -1,3 +1,4 @@
+{|
 |-
 ! colspan="2" style="background:#ffdead;" | ყაზანი
 |-
@@ -30,3 +31,41 @@
 |-
 | [[რელიგია]] || [[სუნიტური]], <br>[[რუსული მართლმადიდებლური]], <br>სხვა
 |}
+
+'''ყაზანი''' ([[თათრული ენა|თათრ.]] ''Qazan'''; [[რუსული ენა|რუს.]] ''Казань'') თათარსტანის დედაქალაქი და რუსეთის ერთ-ერთი უდიდესი ქალაქთაგანია. ის რეგიონის მთავარი ინდუსტრიული, კომერციული და კულტურული ცენტრია და რჩება თათართა კულტურის უმნიშვნელოვანეს წყაროდ. ყაზანი მდებარეობს მდ. ვოლგასა და კაზანკას შესართავთან რუსეთის ცენტრალურ ევროპულ ნაწილში.
+
+{{ითარგმნება}}
+[[კატეგორია:თათარსტანი]]
+[[კატეგორია:რუსეთის ქალაქები]]
+
+[[bg:Казан]]
+[[cv:Хусан]]
+[[cs:Kazaň]]
+[[de:Kasan]]
+[[et:Kaasan]]
+[[el:Καζάν]]
+[[es:Kazán]]
+[[eo:Kazan]]
+[[fa:قازان]]
+[[fr:Kazan (Russie)]]
+[[ko:카잔]]
+[[hr:Kazan]]
+[[os:Хъазан]]
+[[it:Kazan]]
+[[la:Casan]]
+[[lv:Kazaņa]]
+[[lt:Kazanė]]
+[[mo:Казан]]
+[[nl:Kazan]]
+[[ja:カザン]]
+[[no:Kazan]]
+[[nn:Kazan]]
+[[pl:Kazań]]
+[[pt:Kazan]]
+[[ro:Kazan]]
+[[ru:Казань]]
+[[simple:Kazan]]
+[[sl:Kazan]]
+[[fi:Kazan]]
+[[sv:Kazan]]
+[[tt:Qazan]]
