--- a/კონრად_ადენაუერი.mw
+++ b/კონრად_ადენაუერი.mw
@@ -7,6 +7,7 @@
 [[კატეგორია:გარდაცვლილი  1967]]
 
 [[bg:Конрад Аденауер]]
+[[bs:Konrad Adenauer]]
 [[ca:Konrad Adenauer]]
 [[cs:Konrad Adenauer]]
 [[da:Konrad Adenauer]]
