--- a/ყაზანი.mw
+++ b/ყაზანი.mw
@@ -1,3 +1,4 @@
+'''ყაზანი''' ([[თათრული ენა|თათრ.]] ''Qazan'''; [[რუსული ენა|რუს.]] ''Казань'') [[თათარსტანი|თათარსტანის]] [[დედაქალაქი]] და [[რუსეთი|რუსეთის]] ერთ-ერთი უდიდესი ქალაქთაგანია. ის რეგიონის მთავარი ინდუსტრიული, კომერციული და კულტურული ცენტრია და რჩება თათართა კულტურის უმნიშვნელოვანეს წყაროდ. ყაზანი მდებარეობს მდ. ვოლგასა და კაზანკას შესართავთან რუსეთის ცენტრალურ ევროპულ ნაწილში.
 {|
 |-
 ! colspan="2" style="background:#ffdead;" | ყაზანი
@@ -31,7 +32,7 @@
 |-
 | [[რელიგია]] || [[სუნიტური]], <br>[[რუსული მართლმადიდებლური]], <br>სხვა
 |}
-'''ყაზანი''' ([[თათრული ენა|თათრ.]] ''Qazan'''; [[რუსული ენა|რუს.]] ''Казань'') თათარსტანის დედაქალაქი და რუსეთის ერთ-ერთი უდიდესი ქალაქთაგანია. ის რეგიონის მთავარი ინდუსტრიული, კომერციული და კულტურული ცენტრია და რჩება თათართა კულტურის უმნიშვნელოვანეს წყაროდ. ყაზანი მდებარეობს მდ. ვოლგასა და კაზანკას შესართავთან რუსეთის ცენტრალურ ევროპულ ნაწილში.
+
 
 {{ითარგმნება}}
 [[კატეგორია:თათარსტანი]]
