*Empty MediaWiki Message*

--- a/ვაღარშაპატი.mw
+++ b/ვაღარშაპატი.mw
@@ -1,4 +1,7 @@
+[[სურათი:Echmiadzin locator map.png|left|50px||ეჩმიაძინის სომხეთის რუქაზე]]
 [[სურათი:Echmiadzin-cathedral.jpg|thumb|250px||ეჩმიაძინის ტაძარი]]
+[[სურათი:Echmiadzin-gayane.jpg|thumb|250px||წმ. გაიანეს ეკლესია]]
+[[სურათი:Echmiadzin-hripsime.jpg|thumb|250px||წმ. ჰრიპსიმეს ეკლესია]]
 '''ეჩმიაძინი''' (სომხ.: Էջմիածին) უწმინდესი ქალაქია [[სომხეთი|სომხეთში]] და სომხური სამოციქულო ეკლესიის კათალიკოსის საბრძანებელი. მდებარეობს [[არმავირის პროვინცია|არმავირის პროვინციაში]], [[ერევანი|ერევნიდან]] დასავლეთით 20 კმ-ში.
 
 ქალაქი თავდაპირველად დაარსდა როგორც ''ვარდკესავანი'' ძვ.წ. მე-4 ან მე-3 საუკუნეში. მეფე ვაღარშმა (117-140) მას სახელი შეუცვალა და ვაღარშაპატი (სომხ.: Վաղարշապատ) დაარქვა, რაც დღემდე რჩება ქალაქის ოფიციალურ სახელად. რამდენიმე ათწლეულში იგი სომხეთის დედაქალაქი ხდება და მე-4 საუკუნემდე ქვეყნის უმნიშვნელოვანეს ქალაქად რჩება.
