*Empty MediaWiki Message*

--- a/ვაღარშაპატი.mw
+++ b/ვაღარშაპატი.mw
@@ -10,7 +10,7 @@
 
 480 წელს ვაჰან მამიკონიანის, სომხეთის რომაელი მმართველი, ბრძანებით ნანგრევებად ქცეული ბაზილიკა შეიცვალა ახალი ჯვრისებრი ფორმის ეკლესიით. 618 წელს ხის თაღი შეცვალა ქვისამ, რომელიც ოთხ მასიურ საყრდენზე იჯდა, რომელიც თავის მხრივ კონსტრუქციის გარე კედლებს აერთიანებდა არკადიებით. ტაძარმა დღემდე სწორედ ამ ფორმით მოაღწია. ტაძარში ადრე სომხურ შუასაუკუნეობრივ მანუსკრიპტთა უდიდესი კოლექცია ინახებოდა, თუმცა მოგვიანებით ისინი მატენადარანს გადაეცა.
 
-მთავარი საკათედრო ტაძრის გარდა ქალაქში კიდევ ორი ძალზედ მნიშვნელოვანი და უძველესი ეკლესიაა. ''წმ. გაიანეს ეკლესია'' გამოირჩევა მისი ჰარმონიული პროპორციებით აგებულ იქნა 630 წელს, ხოლო მე-17 საუკუნეში კი მნიშვნელოვნად გაფართოვდა. ''წმ. ჰრიპსიმეს ეკლესია'' 618 წელს აიგო და დღემდე უცვლელის სახით შემორჩა. ეს ორი ეკლესია, საკათედრო ტაძარი და ახლომდებარე არქეოლოგიური ზონა [[ზვარტნოცი]] [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის ძეგლთა სიაშია შეტანილი.
+მთავარი საკათედრო ტაძრის გარდა ქალაქში კიდევ ორი ძალზედ მნიშვნელოვანი და უძველესი ეკლესიაა. ''წმ. გაიანეს ეკლესია'' გამოირჩევა მისი ჰარმონიული პროპორციებით აგებულ იქნა 630 წელს, ხოლო მე-17 საუკუნეში კი მნიშვნელოვნად გაფართოვდა. ''წმ. ჰრიპსიმეს ეკლესია'' 618 წელს აიგო და დღემდე უცვლელის სახით შემორჩა. ეს ორი ეკლესია, საკათედრო ტაძარი და ახლომდებარე არქეოლოგიური ზონა [[ზვართნოცი]] [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის ძეგლთა სიაშია შეტანილი.
 
 [[კატეგორია:სომხეთის არქიტექტურული ძეგლები]]
 [[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
