--- a/სვანეთი.mw
+++ b/სვანეთი.mw
@@ -1,4 +1,5 @@
 [[სურათი:Svaneti.jpg|thumb|right|300px|ზემო სვანეთი]]
+[[სურათი:Svaneti Kavkasioni.jpg|thumb|right|300px|ხედი კავკასიონზე სვანეთიდან]]
 '''სვანეთი''' [[საქართველო|საქართველოს]] ისტორიულ-გეოგრაფიული მხარეა. იგი მოიცავს [[კავკასიონი|კავკასიონის]] ქედის სამხრეთ კალთებს და მდინარეების [[ენგური|ენგურისა]] და [[ცხენისწყალი|ცხენისწყლის]] ზემოწელს. ისტორიულ სვანეთში შედიოდა აგრეთვე ე.წ. [[აფხაზეთი|აფხაზეთის]] სვანეთი (მდინარე კოდორის ზედა ნაწილი), [[სამეგრელო|სამეგრელოს]], [[რაჭა|ზემო რაჭისა]] და [[ლეჩხუმი|ლეჩხუმის]] მოსაზღვრე რეგიონები.
 
 
@@ -11,6 +12,7 @@
 თანამედროვე ადმინისტრაციულ-ტერიტორიული დაყოფით ზემო სვანეთი შედის [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელო-ზემო სვანეთის მხარის]] [[მესტიის რაიონი|მესტიის რაიონში]], ქვემო სვანეთი - [[რაჭა-ლეჩხუმის და ქვემო სვანეთის მხარე|რაჭა-ლეჩხუმი-ქვემო სვანეთის მხარის]] [[ლენტეხის რაიონი|ლენტეხის რაიონში]]. სვანეთის მოსახლეობის აბსოლუტური უმრავლესობა [[ქართველები|ქართველია]], კერძოდ მათი ეთნოგრაფიული ჯგუფი - [[სვანები]].
 
 [[კატეგორია:საქართველოს ისტორიულ-გეოგრაფიული მხარეები]]
+[[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
 [[ca:Svanètia]]
 [[de:Swanetien]]
