--- a/ნობელის_პრემია.mw
+++ b/ნობელის_პრემია.mw
@@ -2,6 +2,16 @@
 '''ნობელის პრემია''', ყოველწლიური საერთაშორისო პრემია, სახელი ეწოდება მისი დამაარსებლის [[შვედები|შვედი]] ინჟინრის, ქიმიკოსის, გამომგონებლისა და მრეწველის [[ნობელები|ა. ბ. ნობელის]] პატივსაცემად.
 
 ნობელის ანდერძის მიხედვით, მისი სიკვდილის შემდეგ დარჩენილ კაპიტალს უნდა შეედგინა ნობელის პრემიის ფონდი. პრემია ენიჭება რასის, ეროვნების, სქესისა და სარწმუნოების განურჩევლად კანდიდატებს ფიზიკის, ქიმიის, მედიცინისა და ფიზიოლოგიის, მხატვრული ლიტერატურის დარგში მნიშვნელოვანი და უახლესი მიღწევებისათვის. ნობელის პრემია შედგება ოქროს მედლისაგან, რომელზეც გამოსახულია ნობელი, დიპლომისა და ფულადი თანხის ჩეკისაგან; თანხის ოდენობა განისაზღვრება ნობელის პრემიის ფონდის შემოსავლით (როგორც წესი, 30-70 ათასი დოლარი). ანდერძის შესაბამისად ნობელის პრემიის მინიჭების უფლება აქვს [[სტოკჰოლმი|სტოკჰოლმის]] სამეფო მეცნიერებათა აკადემიას ([[ფიზიკა|ფიზიკისა]] და [[ქიმია|ქიმიის]] დარგში, მემორიალური პრემია ეკონომიკის დარგში - [[1968]]), კაროლინის სამეფო სამედიცინო - ქირურგიის ინსტიტუტს სტოკჰოლმში (ფიზიოლოგიასა და მედიცინაში) და [[შვეცია|შვეციის]] აკადემიას სტოკჰოლმში (ლიტერატურის დარგში), [[ნორვეგია|ნორვეგიაში]] ნობელის პრემიას მშვიდობის განმტკიცებისათვის ანიჭებს ნორვეგიის პარლამენტის მიერ დანიშნული ნობელის კომიტეტი. ნობელის პრემიას ანიჭებენ ცალკეულ პირებს და მხოლოდ ერთხელ (არსებობს გამონაკლისიც, მაგალითად [[სკლოდოვსკი-კიური, მარი |მ. სკლოდოვსკი-კიურიმ]] ნობელის პრემია მიიღო ორჯერ - [[1903]] და [[1911]]). ნობელის პრემიის გადაცემის საზეიმო ცერემონიალი იმართება სტოკჰოლმსა და [[ოსლო|ოსლოში]] ყოველი წლის [[10 დეკემბერი|10 დეკემბერს]] - ა. ნობელის გარდაცვალების დღეს, რომელიც ნობელის დღედაა გამოცხადებული. ნობელის პრემიის მინიჭება დაიწყო [[1901]] წელს. ნობელის პრემია მიენიჭა: ფიზიკისა და ქიმიის დარგში - [[რენტგენი, ვილჰელმ|ვ. რენტგენს]] (1901), [[პლანკი, მაქს | მ. პლანკს]] ([[1918]]), [[აინშტაინი, ალბერტ|ა. აინშტაინს]] ([[1921]]), [[ბორი, ნილს|ნ. ბორს]] ([[1922]]), [[რეზერფორდი, ერნესტ|ე. რეზერფორდ]] ([[1908]]), [[ლანდაუ, ლევ|ლ. ლანდაუს]] ([[1962]]) და სხვებს. ფიზიოლიგიისა და მედიცინის დარგში  - [[პავლოვი, ივანე|ი. პავლოვს]] ([[1904]]), [[კოხი, რობერტ|რ. კოხს]] ([[1905]]) და სხვებს. ლიტერატურის დარგში - [[თაგორი, რაბინდრანათ|რ. თაგორს]] ([[1913]]), [[როლანი, რომენ|რ. როლანს]] ([[1915]]), [[მანი, თომას|თ. მანს]] ([[1929]]), [[შოლოხოვი, მიხეილ|მ. შოლოხოვს]] ([[1965]]) და სხვებს.
+==იხილეთ აგრეთვე==
+
+
+
+* [[ნობელის პრემიის ლაურეატები ლიტერატურის დარგში]]
+* [[ნობელის პრემიის ლაურეატები მედიცინის დარგში]]
+* [[ნობელის პრემიის ლაურეატები მშვიდობის განმტკიცებისათვის]]
+* [[ნობელის პრემის ლაურეატები ფიზიკის დარგში]]
+* [[ნობელის პრემიის ლაურეატები ფიზიოლოგიასა და მედიცინის დარგში]]
+* [[ნობელის პრემიის ლაურეატები ქიმიის დარგში]]
 
 [[კატეგორია:ნობელის პრემია|*]]
 [[კატეგორია:ნობელის პრემიის ლაურეატები]]
