*Empty MediaWiki Message*

--- a/ნობელის_პრემიის_ლაურეატები_მშვიდობის_განმტკიცებაში.mw
+++ b/ნობელის_პრემიის_ლაურეატები_მშვიდობის_განმტკიცებაში.mw
@@ -7,3 +7,39 @@
 
 
 [[კატეგორია:ნობელის პრემია მშვიდობის განმტკიცებისათვის]]
+
+
+
+[[ast:Premiu Nobel de la Paz]]
+[[bs:Nobelova nagrada za mir]]
+[[ca:Premi Nobel de la Pau]]
+[[cy:Gwobr Heddwch Nobel]]
+[[da:Nobels fredspris]]
+[[de:Liste der Friedensnobelpreisträger]]
+[[en:Nobel Peace Prize]]
+[[eo:Premio Nobel de Paco]]
+[[es:Premio Nobel de la Paz]]
+[[eu:Bakearen Nobel saria]]
+[[fr:Prix Nobel de la paix]]
+[[fy:Nobelpriis foar de Frede]]
+[[he:פרס נובל לשלום]]
+[[hr:Nobelova nagrada za mir]]
+[[id:Penghargaan Perdamaian Nobel]]
+[[io:Nobel-premiarii en pacala laboro]]
+[[is:Friðarverðlaun Nóbels]]
+[[it:Premio Nobel per la pace]]
+[[ja:ノーベル平和賞]]
+[[ko:노벨 평화상]]
+[[lb:Friddensnobelpräis]]
+[[nl:Nobelprijs voor de Vrede]]
+[[no:Nobels fredspris]]
+[[pl:Pokojowa Nagroda Nobla]]
+[[pt:Nobel da Paz]]
+[[ro:Premiul Nobel pentru Pace]]
+[[ru:Нобелевская премия мира]]
+[[scn:Premiu Nobel pâ paci]]
+[[fi:Nobelin rauhanpalkinto]]
+[[sv:Nobels fredspris]]
+[[tr:Nobel barış ödülü sahipleri (liste)]]
+[[zh:诺贝尔和平奖]]
+[[zh-min-nan:Nobel Hô-pêng Chióng]]
