*Empty MediaWiki Message*

--- a/მილანი.mw
+++ b/მილანი.mw
@@ -8,6 +8,56 @@
 ქალაქი განთქმულია მოდის ფირმებითა და მაღაზიებით. აქვეა მსოფლიოში უძველესი სავაჭრო ცენტრი Galleria Vittorio Emanuele პიაცა დუომოზე. მილანი მსოფლიო მოდისა და დიზაინის ერთ-ერთ დედაქალაქთაგანია [[ნიუ-იორკი|ნიუ-იორკის]], [[პარიზი|პარიზის]], [[ლონდონი|ლონდონისა]] და [[ტოკიო|ტოკიოს]] გვერდიგვერდ. ქალაქი ასევე [[ევროპა|ევროპის]] ერთ-ერთ უმთავრეს საფინანსო და ბიზნეს ცენტრად ითვლება. მილანი ასევე ცნობილია აქ წარმოებული ავტომანქანებით [[ალფა-რომეო]] და აბრეშუმის ქსოვილით.
 
 {{ესკიზი}}
+==მილანის ფოტო გალერეა==
+<gallery>
+Image:Duomo 1.jpg|დუომო
+Image:Duomo lontano.JPG|დუომო
+Image:IMG 1459.JPG|მადონინას ქანდაკება დუომოს თავზე
+Image:IMG 1551.JPG|დუომოს უკანა ხედი
+Image:IMG 1411.JPG|დუომოს ინტერიერი
+Image:IMG 1783.JPG|ლეონარდო და ვინჩის ცხენის ქანდაკება იპოდრომზე
+Image:IMG 1469.JPG|პიაცა დუომო
+Image:IMG 1455.JPG|პიაცა დუომო, არენგარიოს მუზეუმი
+Image:Sambrogio .JPG|სანტ-ამბროჯიოს ბაზილიკა
+Image:IMG 1983.JPG|სანტ-ამბროჯიოს ბაზილიკა
+Image:218144.jpg|ნავიგლიო გრანდე
+Image:Navigliograndenotte.jpg|ნავიგლიო გრანდე ღამით
+Image:Lavandai 1.jpg|ვიკოლო ლავანდა
+Image:Chiesa 2 borromeo.JPG|სანტ-ალესანდრო
+Image:Chiesa via san vittore.JPG|სან-ვოტორე
+Image:IMG 0823.JPG|სანტ-ეუსტორჯიოს ბაზილიკა
+Image:Seustorgio facciata.JPG|სანტ-ეუსტორჯიოს ბაზილიკა
+Image:Sanfedele.JPG|სან-ფედელე
+Image:218178.jpg|პორტა ტიჩინეზე
+Image:218139.JPG|ჩიმიტერო მონუმენტალე, ფამედიო
+Image:La scala.JPG|ლა-სკალას მოედანი და თეატრი
+Image:Cadorna.jpg|კადორნას მოედანი: აგო და ფილოს მონუმენტი
+Image:Repubblicamilano.jpg|საფინანსო უბანი
+Image:Galva.jpg|ტორე-გალფა
+Image:Pirellone1.JPG|პირელის ცათამბჯენი
+Image:Pirellone3.JPG|პირელის ცათამბჯენი
+Image:Pirelli44.JPG|პირელის ცათამბჯენი
+Image:PAOLO003.jpg|სან-სიროს სტადიონი
+Image:PAOLO009.jpg|სან-სიროს სტადიონი
+Image:219579.jpg|სან-სიროს სტადიონი
+Image:Certosagaregnano.JPG|ჩესტოსა დი გარეგანო
+Image:Garegnano44.JPG|ჩესტოსა დი გარეგანოს ინტერიერი
+Image:Centrale546.jpg|სტაციონე ცენტრალე
+Image:Corsovem.JPG|Corso Vittorio Emanuele II°
+Image:Galleria657.JPG|Galleria Vittorio Emanuele II°
+Image:GALLERIA205.jpg|Galleria Vittorio Emanuele II°
+Image:IMG 1489.JPG|Galleria Vittorio Emanuele II°
+Image:Galleria7776.JPG|Galleria Vittorio Emanuele II°
+Image:Smaurizioinside.jpg|სან-მაურიციოს ეკლესიის ინტერიერი
+Image:Velasca3.JPG|ტორე-ველასკა
+Image:Svizzero777.jpg|სენტრო სვიცერო
+Image:Pharmaciabn.JPG|გემინის ცენტრი
+Image:Turati2331.jpg|ვია-ტურატი
+Image:Sansatiro5.jpg|სან-სატიროს ეკლესიის ინტერიერი
+</gallery>
+
+
+
 
 [[კატეგორია:იტალიის ქალაქები]]
 
