*Empty MediaWiki Message*

--- a/ნობელის_პრემიის_ლაურეატები_ფიზიოლოგიასა_და_მედიცინაში.mw
+++ b/ნობელის_პრემიის_ლაურეატები_ფიზიოლოგიასა_და_მედიცინაში.mw
@@ -1,6 +1,6 @@
 ნობელის პრემიის ლაურეატები ფიზიოლოგიასა და მედიცინის დარგში.    
 
-
+* [[კოხი, რობერტ]] - [[1905]] - [[გერმანია]]
 * [[ჰაქსლი, ენდრუ ფილდინგ]] - 1963 - ინგლისი
 * [[ჟაკობი, ფრანსუა]]- 1965 - საფრანგეთი
 
