*Empty MediaWiki Message*

--- a/მილანი.mw
+++ b/მილანი.mw
@@ -5,19 +5,19 @@
 
 მილანის პროვინცია ლომბარდიის დასავლეთ ნაწილშია და ფარავს 1.981 კვ.კმ-ს საერთო მოსახლეობით 3.838.818 (2004); პროვინცია 188 კომუნისგან შედგება.
 
-ქალაქი განთქმულია მოდის ფირმებითა და მაღაზიებით. აქვეა მსოფლიოში უძველესი სავაჭრო ცენტრი Galleria Vittorio Emanuele პიაცა დუომოზე. მილანი მსოფლიო მოდისა და დიზაინის ერთ-ერთ დედაქალაქთაგანია [[ნიუ-იორკი|ნიუ-იორკის]], [[პარიზი|პარიზის]], [[ლონდონი|ლონდონისა]] და [[ტოკიო|ტოკიოს]] გვერდიგვერდ. ქალაქი ასევე [[ევროპა|ევროპის]] ერთ-ერთ უმთავრეს საფინანსო და ბიზნეს ცენტრად ითვლება. მილანი ასევე ცნობილია აქ წარმოებული ავტომანქანებით [[ალფა-რომეო]] და აბრეშუმის ქსოვილით.
+ქალაქი განთქმულია მოდის ფირმებითა და მაღაზიებით. აქვეა მსოფლიოში უძველესი სავაჭრო ცენტრი Galleria Vittorio Emanuele პიაცა დომოზე (ტაძრის მოედანი). მილანი მსოფლიო მოდისა და დიზაინის ერთ-ერთ დედაქალაქთაგანია [[ნიუ-იორკი|ნიუ-იორკის]], [[პარიზი|პარიზის]], [[ლონდონი|ლონდონისა]] და [[ტოკიო|ტოკიოს]] გვერდიგვერდ. ქალაქი ასევე [[ევროპა|ევროპის]] ერთ-ერთ უმთავრეს საფინანსო და ბიზნეს ცენტრად ითვლება. მილანი ასევე ცნობილია აქ წარმოებული ავტომანქანებით [[ალფა-რომეო]] და აბრეშუმის ქსოვილით.
 
 {{ესკიზი}}
 ==მილანის ფოტო გალერეა==
 <gallery>
-Image:Duomo 1.jpg|დუომო
-Image:Duomo lontano.JPG|დუომო
-Image:IMG 1459.JPG|მადონინას ქანდაკება დუომოს თავზე
-Image:IMG 1551.JPG|დუომოს უკანა ხედი
-Image:IMG 1411.JPG|დუომოს ინტერიერი
+Image:Duomo 1.jpg|[[მილანის საკათედრო ტაძარი]]
+Image:Duomo lontano.JPG|მილანის საკათედრო ტაძარი
+Image:IMG 1459.JPG|მადონინას ქანდაკება დომოს თავზე
+Image:IMG 1551.JPG|დომოს უკანა ხედი
+Image:IMG 1411.JPG|დომოს ინტერიერი
 Image:IMG 1783.JPG|ლეონარდო და ვინჩის ცხენის ქანდაკება იპოდრომზე
-Image:IMG 1469.JPG|პიაცა დუომო
-Image:IMG 1455.JPG|პიაცა დუომო, არენგარიოს მუზეუმი
+Image:IMG 1469.JPG|პიაცა დომო
+Image:IMG 1455.JPG|პიაცა დომო, არენგარიოს მუზეუმი
 Image:Sambrogio .JPG|სანტ-ამბროჯიოს ბაზილიკა
 Image:IMG 1983.JPG|სანტ-ამბროჯიოს ბაზილიკა
 Image:218144.jpg|ნავიგლიო გრანდე
