*Empty MediaWiki Message*

--- a/ნობელის_პრემია.mw
+++ b/ნობელის_პრემია.mw
@@ -7,7 +7,7 @@
 
 
 * [[ნობელის პრემიის ლაურეატები ლიტერატურის დარგში]]
-* [[ნობელის პრემიის ლაურეატები მედიცინის დარგში]]
+* [[ ნობელის პრემიის ლაურეატები ფიზიოლოგიასა და მედიცინის დარგში]]
 * [[ნობელის პრემიის ლაურეატები მშვიდობის განმტკიცებისათვის]]
 * [[ნობელის პრემიის ლაურეატები ფიზიკის დარგში]]
 * [[ნობელის პრემიის ლაურეატები ფიზიოლოგიასა და მედიცინის დარგში]]
