*Empty MediaWiki Message*

--- a/ნობელის_პრემიის_ლაურეატები.mw
+++ b/ნობელის_პრემიის_ლაურეატები.mw
@@ -1,4 +1,4 @@
-ნობელის პრემიის ლაურეატები კატეგორიების მიხედვით:
+[[ნობელის პრემია|ნობელის პრემიის]] ლაურეატები კატეგორიების მიხედვით:
 
 
 * [[ნობელის პრემიის ლაურეატები ლიტერატურის დარგში]]
