ფოტოგალერეა იწერება ერთად

--- a/მილანი.mw
+++ b/მილანი.mw
@@ -1,14 +1,15 @@
 [[სურათი:Milano-Stemma.png|thumb|მილანის გერბი]]
-'''მილანი''' (იტ.: Milano; მილანურ დიალექზე: Milán) ჩრდილეოთ [[იტალია|იტალიის]] მთავარი ქალაქია, მდებარეობს [[ლომბარდია|ლომბარდიის]] დაბლობზე და ქვეყნის ყველაზე მჭიდროდ დასახლებული და განვითარებული რეგიონია. ქალაქის ფარგლებში 1.308.500 მცხოვრებია (2004), თუმცა მის აგლომერაციაში (La Grande Milano, დიდი მილანი) 4 მილიონზე მეტი ადამიანი ცხოვრობს. მილანის ე.წ. Città Regione (ქალაქი-რეგიონი) 9,4 მილიონზე მეტ მცხოვრებს ითვლის.
+'''მილანი''' (''[[იტალიური ენა|იტალ.]]'': Milano; მილანურ დიალექტზე: Milán) ჩრდილოეთ [[იტალია|იტალიის]] მთავარი ქალაქია, მდებარეობს [[ლომბარდია|ლომბარდიის]] დაბლობზე და ქვეყნის ყველაზე მჭიდროდ დასახლებული და განვითარებული რეგიონია. ქალაქის ფარგლებში 1.308.500 მცხოვრებია (2004), თუმცა მის აგლომერაციაში (La Grande Milano, დიდი მილანი) 4 მილიონზე მეტი ადამიანი ცხოვრობს. მილანის ე.წ. Città Regione (ქალაქი-რეგიონი) 9,4 მილიონზე მეტ მცხოვრებს ითვლის.
 
-მილანის სახელი მრავალი საუკუნის განმავლობაში იწერებოდა როგორც ''მაილანდი'', რომელიც ამჟამადაც ამ ქალაქის გერმანული სახელია. ეს სახელი მომდინარეობს კელტური Mid-lan-იდან (შუა გავაკებაზე) და რომაელთათვის ცნობილი იყო როგორც Mediolanum.
+მილანის სახელი მრავალი საუკუნის განმავლობაში იწერებოდა როგორც ''მაილანდი'', რომელიც ამჟამადაც ამ ქალაქის გერმანული სახელია. ეს სახელი მომდინარეობს კელტური Mid-lan-იდან (შუა გავაკებაზე) და რომაელთათვის ცნობილი იყო როგორც Mediolanum .
 
 მილანის პროვინცია ლომბარდიის დასავლეთ ნაწილშია და ფარავს 1.981 კვ.კმ-ს საერთო მოსახლეობით 3.838.818 (2004); პროვინცია 188 კომუნისგან შედგება.
 
 ქალაქი განთქმულია მოდის ფირმებითა და მაღაზიებით. აქვეა მსოფლიოში უძველესი სავაჭრო ცენტრი Galleria Vittorio Emanuele პიაცა დომოზე (ტაძრის მოედანი). მილანი მსოფლიო მოდისა და დიზაინის ერთ-ერთ დედაქალაქთაგანია [[ნიუ-იორკი|ნიუ-იორკის]], [[პარიზი|პარიზის]], [[ლონდონი|ლონდონისა]] და [[ტოკიო|ტოკიოს]] გვერდიგვერდ. ქალაქი ასევე [[ევროპა|ევროპის]] ერთ-ერთ უმთავრეს საფინანსო და ბიზნეს ცენტრად ითვლება. მილანი ასევე ცნობილია აქ წარმოებული ავტომანქანებით [[ალფა-რომეო]] და აბრეშუმის ქსოვილით.
-
+==ისტორია==
+მილანი დააარსეს ინსუბრებმა ძვ. წ. V საუკუნის ბოლოს ან VI საუკუნის დასაწყისში. ძვ. წ. 196 რომს დამორჩილდა (''[[ლათინური ენა|ლათ.]]'' სახელწოდება Mediolanum) და რომის იმპერიის მნიშვნელოვანი ეკონომიკური ცენტრი გახდა. [[ლანგობარდები|ლანგობარდების]] დროს იყო ერთ-ერთი ჰერცოგის რეზიდენცია, 801-იდან მილანის საგრაფოს დედაქალაქი, X საუკუნის დასასრულიდან - საარქიეპისკოპოსოს ცენტრი. XI-XII საუკუნეებში ხელოსნობისა (იარაღის, აბრეშუმის, მაუდის და სხვა წარმოება) და ვაჭრობის ცენტრია. XI საუკუნის II ნახევრიდან მილანი [[პატარია|პატარიის]] ერთ-ერთ კერას წარმოადგენდა, რის შედეგად 1097-1098 განმტკიცდა კომუნა (აღმოცენდა ჯერ კიდევ XI საუკუნის შუა წლებში). 
 {{ესკიზი}}
-==მილანის ფოტო გალერეა==
+==მილანის ფოტოგალერეა==
 <gallery>
 Image:Duomo 1.jpg|[[მილანის საკათედრო ტაძარი]]
 Image:Duomo lontano.JPG|მილანის საკათედრო ტაძარი
