--- a/ცნობილი_ქართველები:_ბ.mw
+++ b/ცნობილი_ქართველები:_ბ.mw
@@ -242,6 +242,9 @@
 * [[ბოკერია, მარიამ]] - პედიატრი
 * [[ბოკუჩავა, მიხეილ]] - ბიოქომიკოსი
 * [[ბოლქვაძე, აბესა]] - გურიის აჯანყების ერთ-ერთი ხელმძღვანელი
+* [[ბოლქვაძე, გივი]] - კარდიოლოგი
+* [[ბოლქვაძე, გიორგი]] - კარდიოლოგი
+* [[ბოლქვაძე, გივი]] - სტომატოლოგი (მოკლე ბიოგრაფია)
 * [[ბოლქვაძე, ზაურ]] - პოეტი
 * [[ბოლქვაძე, თამარ]] - კინომსახიობი
 * [[ბოლქვაძე, თინათინ]] - მსახიობი
