*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ბ.mw
+++ b/ცნობილი_ქართველები:_ბ.mw
@@ -244,7 +244,7 @@
 * [[ბოლქვაძე, აბესა]] - გურიის აჯანყების ერთ-ერთი ხელმძღვანელი
 * [[ბოლქვაძე, გივი]] - კარდიოლოგი
 * [[ბოლქვაძე, გიორგი]] - კარდიოლოგი
-* [[ბოლქვაძე, გივი]] - სტომატოლოგი (მოკლე ბიოგრაფია)
+* [[ბოლქვაძე, გივი]] - სტომატოლოგი 
 * [[ბოლქვაძე, ზაურ]] - პოეტი
 * [[ბოლქვაძე, თამარ]] - კინომსახიობი
 * [[ბოლქვაძე, თინათინ]] - მსახიობი
