--- a/ცნობილი_ქართველები:_ბ.mw
+++ b/ცნობილი_ქართველები:_ბ.mw
@@ -242,7 +242,7 @@
 * [[ბოკერია, მარიამ]] - პედიატრი
 * [[ბოკუჩავა, მიხეილ]] - ბიოქომიკოსი
 * [[ბოლქვაძე, აბესა]] - გურიის აჯანყების ერთ-ერთი ხელმძღვანელი
-* [[ბოლქვაძე, გივი]] - კარდიოლოგი
+* [[ბოლქვაძე, გივი1]] - კარდიოლოგი
 * [[ბოლქვაძე, გიორგი]] - კარდიოლოგი
 * [[ბოლქვაძე, გივი]] - სტომატოლოგი 
 * [[ბოლქვაძე, ზაურ]] - პოეტი
