--- a/ცნობილი_ქართველები:_დ.mw
+++ b/ცნობილი_ქართველები:_დ.mw
@@ -157,6 +157,7 @@
 * [[დოჩანაშვილი, გურამ]] - მწერალი
 
 ==დუ==
+* [[დობორჯგინიძე, ალექსანდრე]] - დამსახურებული ფინანსისტი
 * [[დუდუჩავა, ალექსანდრე]] - კრიტიკოსი, ხელოვნებათმცოდნე
 * [[დუდუჩავა, მამია]] - ხელოვნებათმცოდნე, ლიტერატურათმცოდნე
 * [[დუმბაძე, იაკობ]] 
