--- a/ცნობილი_ქართველები:_დ.mw
+++ b/ცნობილი_ქართველები:_დ.mw
@@ -129,7 +129,7 @@
 * [[დიღმელოვი, ალექსანდრე]] - კინოოპერატორი
 
 ==დო==
-* [[დობორჯგინიძე, ალექსანდრე]] - საქართველოს დამსახურებული ფინანსისტი
+* [[დობორჯგინიძე, ალექსანდრე]] - დამსახურებული ფინანსისტი
 * [[დოდაშვილი, კოტე]] - ენათმეცნიერი და ლიტერატურათმცოდნე
 * [[დოდაშვილი, სოლომონ]] - განმანათლებელი, ფილოსოფოს-ლოგიკოსი, ჟურნალისტი
 * [[დოლაბერიძე, იამზე]] - მსახიობი
