--- a/ცნობილი_ქართველები:_მ.mw
+++ b/ცნობილი_ქართველები:_მ.mw
@@ -176,6 +176,7 @@
 * [[მელქისედეკ III]] - სრულიად საქართველოს კათალიკოს-პატრიარქი
 * [[მელქისედეკი]] - პირველი გელათელი - გელათის ეპისკოპოსი მიტროპოლიტის წოდებით
 * [[მენაბდე, ვლადიმერ]] - გენეტიკოს-სელექციონერი
+* [[მენაბდე, გიორგი]] - პროფესორი, თსსუ - რექტორი, საქართველოს სტომატოლოგთა ასოციაციის პრეზიდენტი
 * [[მენაღარიშვილი, ათინოგენ]] - აგროქიმიკოსი
 * [[მენთეშაშვილი, ირაკლი]] - ფსიქიატრი
 * [[მენთეშაშვილი, სტეფანე]] - ენათმეცნიერი
