*Empty MediaWiki Message*

--- a/გიორგი_მენაბდე.mw
+++ b/გიორგი_მენაბდე.mw
@@ -1,18 +1,8 @@
-[[სურათი:rector.jpg]]
-თბილისის სახელმწიფო სამედიცინო უნივერსიტეტის რექტორის მოვალეობის შემსრულებელი
+[[სურათი:rector.jpg|thumb|გიორგი მენაბდე]]
+'''გიორგი მენაბდე''' ამჟამად [[თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი|თბილისის სახელმწიფო სამედიცინო უნივერსიტეტის]] რექტორის მოვალეობის შემსრულებელი მედიცინის მეცნიერებათა დოქტორი, პროფესორი, საქართველოს სტომატოლოგთა ასოციაციის პრეზიდენტი, აშშ-ს ფლორიდის შტატის იმპლანტოლოგიის აკადემიის წევრი, მსოფლიო სტომატოლოგთა ასოციაციის გამგეობის წევრი
 
-გიორგი მენაბდე
-
-მედიცინის მეცნიერებათა დოქტორი, პროფესორი
-საქართველოს სტომატოლოგთა ასოციაციის პრეზიდენტი
-აშშ-ს ფლორიდის შტატის იმპლანტოლოგიის აკადემიის წევრი
-მსოფლიო სტომატოლოგთა ასოციაციის გამგეობის წევრი
-
- 
-
+==ბიოგრაფია== 
 დაიბადა 1957 წლის 24 სექტემბერს, ქ. თბილისში.
-
-განათლება
 
 1980 წ . დაამთავრა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის სტომატოლოგიური ფაკულტეტი.
 
