--- a/გიორგი_მენაბდე.mw
+++ b/გიორგი_მენაბდე.mw
@@ -2,21 +2,11 @@
 '''გიორგი მენაბდე''' ამჟამად [[თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი|თბილისის სახელმწიფო სამედიცინო უნივერსიტეტის]] რექტორის მოვალეობის შემსრულებელი მედიცინის მეცნიერებათა დოქტორი, პროფესორი, საქართველოს სტომატოლოგთა ასოციაციის პრეზიდენტი, აშშ-ს ფლორიდის შტატის იმპლანტოლოგიის აკადემიის წევრი, მსოფლიო სტომატოლოგთა ასოციაციის გამგეობის წევრი
 
 ==ბიოგრაფია== 
-დაიბადა 1957 წლის 24 სექტემბერს, ქ. თბილისში.
+გიორგი მენაბდე დაიბადა [[1957]] წლის [[24 სექტემბერი|24 სექტემბერს]], ქ. [[თბილისი|თბილისში]]. 1980 წ. დაამთავრა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის სტომატოლოგიური ფაკულტეტი. 1986 წელს დაიცვა საკანდიდატო დისერტაცია თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ყბა - სახის ქირურგიის კათედრაზე. 1986-1992 წ. [[მოსკოვი|მოსკოვის]] თავისა და კისრის აღდგენითი ქირურგიის და მიკროქირურგიის ცენტრის დოქტორანტი იყო.
 
-1980 წ . დაამთავრა თბილისის სახელმწიფო სამედიცინო ინსტიტუტის სტომატოლოგიური ფაკულტეტი.
+კვალიფიკაცია ქ . მოსკოვის ქირურგიის ინსტიტუტში გაიარა მიკროქირურგიის კურსით. 1992 წელს მოსკოვში მიენიჭა მეცნიერებათა დოქტორის ხარისხი. 2001 წ. – მიენიჭა პროფესორის წოდება.
 
-1986 წელს . დაიცვა საკანდიდატო დისერტაცია თბილისის სახელმწიფო სამედიცინო ინსტიტუტის ყბა - სახის ქირურგიის კათედრაზე.
-
-1986-1992 წ . ქ . მოსკოვის თავისა და კისრის აღდგენითი ქირურგიის და მიკროქირურგიის ცენტრის დოქტორანტი.
-
-კვალიფიკაცია გაიარა ქ . მოსკოვის ქირურგიის ინსტიტუტში მიკროქირურგიის კურსით.
-
-1992 წელს ქ. მოსკოვში მიენიჭა მეცნიერებათა დოქტორის ხარისხი.
-
-2001 წ – მიენიჭა პროფესორის წოდება.
-
-პროფესიული გამოცდილება
+==პროფესიული გამოცდილება==
 
 1981-1982 წ – მუშაობდა ქ . მახარაძის ბავშვთა რაიონული საავადმყოფოს ყბა-სახის განყოფილების ექიმ - ორდინატორად.
 
@@ -34,6 +24,8 @@
 
 პროფ. გიორგი მენაბდე არის საქართველოს ღირსების ორდენის კავალერი.
 
-სამეცნიერო შრომები
+==სამეცნიერო შრომები==
 
-პროფ. გიორგი მენაბდე არის 4 საავტორო უფლებისა და 50 სამეცნიერო ნაშრომის ავტორი.
+პროფ. გიორგი მენაბდე 4 საავტორო უფლებისა და 50 სამეცნიერო ნაშრომის ავტორია.
+
+[[კატეგორია:ქართველები]]
