*Empty MediaWiki Message*

--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -1,4 +1,4 @@
-თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი საქართველოში უმაღლესი სამედიცინო განათლებისა  და მეცნიერების უმთავრესი კერაა.  აქ თავმოყრილია საქართველოს სამედიცინო პედაგოგიური და  და სამეცნიერო კადრების საუკეთესო ნაწილი. 
+[[სურათი:tsmuview2.jpg|thumb|თბილისის სახელწიფო სამედიცინო უნივერსიტეტი]]თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი საქართველოში უმაღლესი სამედიცინო განათლებისა  და მეცნიერების უმთავრესი კერაა.  აქ თავმოყრილია საქართველოს სამედიცინო პედაგოგიური და  და სამეცნიერო კადრების საუკეთესო ნაწილი. 
 
 თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში ინსტიტუტი),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში ქართული საზოგადოების გამოჩენილი მოღვაწეები იდგნენ: ივანე ჯავახიშვილი, ნიკო ცხვედაძე, პეტრე მელიქიშვილი, ექვთიმე თაყაიშვილი, კორნელი კეკელიძე, აკაკი შანიძე და სხვ. 
 
