*Empty MediaWiki Message*

--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -3,7 +3,7 @@
 თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში ინსტიტუტი),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში ქართული საზოგადოების გამოჩენილი მოღვაწეები იდგნენ: ივანე ჯავახიშვილი, ნიკო ცხვედაძე, პეტრე მელიქიშვილი, ექვთიმე თაყაიშვილი, კორნელი კეკელიძე, აკაკი შანიძე და სხვ. 
 
 [[სურათი:univer_old.jpg|thumb|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
-1918 წლის 27 თებერვალს უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ ,,ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების” თავმჯდომარის სპირიდონ ვირსალაძის ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. 1919 წლის 9 აპრილს უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი გაიყო ცალკეულ ფაკულტეტებად.
+1918 წლის 27 თებერვალს უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ ,,[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის სპირიდონ ვირსალაძის ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. 1919 წლის 9 აპრილს უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი გაიყო ცალკეულ ფაკულტეტებად.
 
 წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. 1930 წლის 10 ივნისს განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
 
