/* ამ დღეს დაბადებულნი */

--- a/24_სექტემბერი.mw
+++ b/24_სექტემბერი.mw
@@ -9,7 +9,7 @@
 == ამ დღეს დაბადებულნი ==
 * [[1818]] : [[ბაგრატიონი, პეტრე]] - ქართველი მეცნიერი და ინჟინერი. 
 *[[1898]] : [[ფლორი, ჰაუარდ]]  - ინგლისელი პათოლოგი
-
+* [[1957]] : [[მენაბდე, გიორგი]] - [[ქართველი მეცნიერი]], [[პროფესორი]], [[იმპლანტოლოგი]], [[ყბასახის ქირურგი]].
 
 == ამ დღეს გარდაცვლილნი ==
 *[[1812]] : [[ბაგრატიონი, პეტრე ივანეს ძე]]  - რუსეთის არმიის ინფანტერიის გენერალი 
