--- a/დიზაინი.mw
+++ b/დიზაინი.mw
@@ -8,7 +8,7 @@
 * [[გრაფიკული დიზაინი]]
 * [[დაგეგმარების არქიტექტურა]]
 * [[დიზაინის კვლევა]]
-* [[ექსპერიმნეტთა დიზაინი]]
+* [[ექსპერიმენტთა დიზაინი]]
 * [[ვებ-დიზაინი]]
 * [[თამაშის დიზაინი]]
 * [[თეატრალური დიზაინი]]
