--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -1,54 +1,54 @@
 [[სურათი:tsmuview2.jpg|thumb|თბილისის სახელწიფო სამედიცინო უნივერსიტეტი]]თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი საქართველოში უმაღლესი სამედიცინო განათლებისა  და მეცნიერების უმთავრესი კერაა.  აქ თავმოყრილია საქართველოს სამედიცინო პედაგოგიური და  და სამეცნიერო კადრების საუკეთესო ნაწილი. 
 
-თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში ინსტიტუტი),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში ქართული საზოგადოების გამოჩენილი მოღვაწეები იდგნენ: ივანე ჯავახიშვილი, ნიკო ცხვედაძე, პეტრე მელიქიშვილი, ექვთიმე თაყაიშვილი, კორნელი კეკელიძე, აკაკი შანიძე და სხვ. 
+თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში [[ინსტიტუტი]]),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში [[ქართული საზოგადოების გამოჩენილი მოღვაწეები]] იდგნენ: [[ჯავახიშვილი, ივანე ]], [[ცხვედაძე, ნიკო ]], [[მელიქიშვილი, პეტრე]], [[თაყაიშვილი, ექვთიმე]], [[კეკელიძე, კორნელი]], [[შანიძე, აკაკი]] [[და სხვა]]. 
 
 [[სურათი:univer_old.jpg|thumb|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
-1918 წლის 27 თებერვალს უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ ,,[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის სპირიდონ ვირსალაძის ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. 1919 წლის 9 აპრილს უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი გაიყო ცალკეულ ფაკულტეტებად.
+[[1918]] წლის [[27 თებერვალი]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ ,,[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი გაიყო ცალკეულ ფაკულტეტებად.
 
-წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. 1930 წლის 10 ივნისს განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
+წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
 
-დღეისათვის, თსსუ-ში შემდეგი ფაკულტეტებია: სამკურნალო (ქართული, რუსული, ინგლისური სექტორები) პედიატრიული, საზოგადოებრივი ჯანდაცვისა და მენეჯმენტის, სტომატოლოგიური, ფარმაცევტული, ფსიქოთერაპიისა და ფსიქოსომატური მედიცინის, უცხო ენების (ინგლისური, გერმანული, ფრანგული ენები). 
+დღეისათვის, [[თსსუ]]-ში შემდეგი ფაკულტეტებია: [[სამკურნალო]] ([[ქართული]], [[რუსული]], [[ინგლისური]] სექტორები) [[პედიატრიული]], საზოგადოებრივი ჯანდაცვისა და მენეჯმენტის, [[სტომატოლოგიური]], [[ფარმაცევტული]], ფსიქოთერაპიისა და ფსიქოსომატური მედიცინის, უცხო ენების ([[ინგლისური]], [[გერმანული]], [[ფრანგული]] [[ენები]]). 
 
 თსსუ-ს  გაფორმებული აქვს ხელშეკრულებები, სხავადასხვა ქვეყნის 30-ზე მეტ უნივერსიტეტთან: 
 
-ავსტრია – გრაცის სამედიცინო უნივერსიტეტი; ვენის სამედიცინო უნივერსიტეტი
-აზერბაიჯანი – აზერბაიჯანის სახელმწიფო სამედიცინო უნივერსიტეტი
-ბელგია – ლუვენის კათოლიკური უნივერსიტეტი (ბრუსელი); ლიეჟის უნივერსიტეტი
-ბულგარეთი – სოფიის სამედიცინო უნივერსიტეტი; ვარნის სამედიცინო უნივერსიტეტი 
-გერმანია – ფრიდრიხ შილერის სახელობის უნივერსიტეტი (იენა)
-ესპანეთი – ბარსელონას უნივერსიტეტი 
-ინგლისი – გლაზგოს უნივერსიტეტი 
-ლიტვა – კლაიპედეს უნივერსიტეტი (კლაიპედა)
-რუმინეთი – სიბიუს უნივერსიტეტი (სიბიუ)
-სომხეთი – ერევნის სამედიცინო უნივერსიტეტი. 
-საფრანგეთი – მარსელის ხმელთაშუა ზღვის უნივერსიტეტი ექს მარსელი II (მარსელი); ტულუზის პედიატრიული კლინიკა (ტულუზა); რენე-დეკარტეს უნივერსიტეტი  პარი - 5; ნანტის უნივერსიტეტის სამედიცინო ფაკულტეტი
-უკრაინა - დონეცკის სახელმწიფო სამედიცინო უნივერსიტეტთან
-აშშ – სკრენტონის უნივერსიტეტი
+[[ავსტრია]] – გრაცის სამედიცინო უნივერსიტეტი; ვენის სამედიცინო უნივერსიტეტი
+[[აზერბაიჯანი]] – აზერბაიჯანის სახელმწიფო სამედიცინო უნივერსიტეტი
+[[ბელგია]] – ლუვენის კათოლიკური უნივერსიტეტი (ბრუსელი); ლიეჟის უნივერსიტეტი
+[[ბულგარეთი]] – სოფიის სამედიცინო უნივერსიტეტი; ვარნის სამედიცინო უნივერსიტეტი 
+[[გერმანია]] – ფრიდრიხ შილერის სახელობის უნივერსიტეტი (იენა)
+[[ესპანეთი]] – ბარსელონას უნივერსიტეტი 
+[[ინგლისი]] – გლაზგოს უნივერსიტეტი 
+[[ლიტვა]] – კლაიპედეს უნივერსიტეტი (კლაიპედა)
+[[რუმინეთი]] – სიბიუს უნივერსიტეტი (სიბიუ)
+[[სომხეთი]] – ერევნის სამედიცინო უნივერსიტეტი. 
+[[საფრანგეთი]] – მარსელის ხმელთაშუა ზღვის უნივერსიტეტი ექს მარსელი II (მარსელი); ტულუზის [[პედიატრიული]] კლინიკა (ტულუზა); რენე-დეკარტეს უნივერსიტეტი  პარი - 5; ნანტის უნივერსიტეტის სამედიცინო ფაკულტეტი
+[[უკრაინა]] - დონეცკის სახელმწიფო სამედიცინო უნივერსიტეტთან
+[[აშშ]] – სკრენტონის უნივერსიტეტი
  
 
-თსსუ სრულუფლებიანი წევრია საერთაშორისო ორგანიზაციებისა და ასოციაციებისა:
+[[თსსუ]] სრულუფლებიანი წევრია საერთაშორისო ორგანიზაციებისა და ასოციაციებისა:
 
-უნივერსიტეტთა საერთაშორისო ასოციაცია (IAU)
-ევროპის უნივერსიტეტთა ასოციაცია (EUA)
-საერთაშორისო განათლების ევროპული ასოციაცია (EAIE)
-ევროპის სამედიცინო განათლების ასოციაცია (AMEE)
-ევროპის მედიკოს სტუდენტთა ასოციაცია (EMSA)
+უნივერსიტეტთა საერთაშორისო ასოციაცია ([[IAU]])
+ევროპის უნივერსიტეტთა ასოციაცია ([[EUA]])
+საერთაშორისო განათლების ევროპული ასოციაცია ([[EAIE]])
+ევროპის სამედიცინო განათლების ასოციაცია ([[AMEE]])
+ევროპის მედიკოს სტუდენტთა ასოციაცია ([[EMSA]])
 თსსუ თანამშრომლობს ორგანიზაციებთან:
 
-სამედიცინო განათლების მსოფლიო ფედერაცია (WFME)
-UNESCO
-უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომისია (ECFMG)
-შვაიცერის მსოფლიო აკადემია (SWA)
-მშვიდობისათვის მლოცველთა მსოფლიო საზოგადოება (WPPS)
-თსსუ-ის დიპლომი აღიარებულია ჯანდაცვის მსოფლიო ორგანიზაციის, გაერთიანებული ერების ორგანიზაციის, საერთაშორისო სამედიცინო განათლებისა და კვლევის ცენტრის, უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომიტეტის და სხვა საერთაშორისო ორგანიზაციების მიერ, რაც უნივერსიტეტს საერთაშორისო სტატუსს ანიჭებს.
+[[სამედიცინო განათლების მსოფლიო ფედერაცია]] ([[WFME]])
+[[UNESCO]]
+[[უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომისია]] ([[ECFMG]])
+[[შვაიცერის მსოფლიო აკადემია]] ([[SWA]])
+[[მშვიდობისათვის მლოცველთა მსოფლიო საზოგადოება]] ([[WPPS]])
+[[თსსუ]]-ის დიპლომი აღიარებულია ჯანდაცვის მსოფლიო ორგანიზაციის, გაერთიანებული ერების ორგანიზაციის, საერთაშორისო სამედიცინო განათლებისა და კვლევის ცენტრის, უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომიტეტის და სხვა საერთაშორისო ორგანიზაციების მიერ, რაც უნივერსიტეტს საერთაშორისო სტატუსს ანიჭებს.
 
 2005 წლის 16 სექტემბერს თსსუ-ს რექტორის მოვალეობის შემსრულებელმა, პროფესორმა ა. თელიამ ბოლონიაში ხელი მოაწერა უნივერსიტეტების დიდ ქარტიას. რის შედეგადაც თსსუ შეუერთდა ბოლონიის პროცესს და გახდა უნივერსიტეტების დიდი ქარტიის წევრი. (MAGNA CHARTA UNIVERSITATUM)
 
 ამჟამად, თბილისის სახელმწიფო სამედიცინო უნივერსიტეტში 53 კათედრა და 2 კურსია. უნივერსიტეტში მუშაობს 1009 თანამშრომელი, რომელთაგან 557 პროფესორ-მასწავლებელია, 250 დამხმარე პერსონალი, 202 ადმინისტრაციის თანამშრომელი.
 
-უნივერსიტეტში სწავლობს 4094 სტუდენტი. აქედან ფასიანი სწავლების სექტორზე 1965 სტუდენტი.
+უნივერსიტეტში სწავლობს 4094 [[სტუდენტი]]. აქედან ფასიანი სწავლების სექტორზე 1965 სტუდენტი.
 
-სამედიცინო უნივერსიტეტში ფუნქციონირებს სამედიცინო კოლეჯი და მისი ქუთაისის ფილიალი, ექსპერიმენტული და კლინიკური მედიცინის სამეცნიერო კვლევითი ინსტიტუტი, პათოლოგიის სამეცნიერო-კვლევითი ინსტიტუტი (ქუთაისი), სამეცნიერო ბიბლიოთეკა, , პედაგოგთა კვალიფიკაციის ასამაღლებელი კურსები, ფარმაცევტთა (პროვიზორთა) კვალიფიკაციის ასამაღლებელი კურსები,  მუზეუმი, რამდენიმე კაბინეტი, კულტურის ცენტრი და სტუდიები.
+სამედიცინო უნივერსიტეტში ფუნქციონირებს სამედიცინო [[კოლეჯი]] და მისი [[ქუთაისი]]ს ფილიალი, ექსპერიმენტული და კლინიკური მედიცინის სამეცნიერო კვლევითი ინსტიტუტი, პათოლოგიის სამეცნიერო-კვლევითი ინსტიტუტი (ქუთაისი), სამეცნიერო ბიბლიოთეკა, , პედაგოგთა კვალიფიკაციის ასამაღლებელი კურსები, ფარმაცევტთა (პროვიზორთა) კვალიფიკაციის ასამაღლებელი კურსები,  მუზეუმი, რამდენიმე კაბინეტი, კულტურის ცენტრი და სტუდიები.
 
 თსსუ-ის გამგებლობაშია მძლავრი მატერიალურ-ტექნიკური ბაზა სასწავლო და სამეცნიერო მუშაობისათვის, სამედიცინო ქალაქის 3 კორპუსი, ფარმაცევტული კორპუსი ცალკე შენობით, სამკურნალწამლო ნივთიერებების წარმოებისათვის, ადმინისტრაციული და ს/კ ინსტიტუტის შენობა, საუნივერსიტეტო ცენტრალური კლინიკა, №1 საუნივერსიტეტო კლინიკა 160 საწოლზე, №2 პედიატრიული კლინიკა 710 საწოლზე, სტომატოლოგიური კლინიკა, ბავშვთა ორი სტომატოლოგიური კლინიკა.
 
@@ -62,6 +62,6 @@ UNESCO
 
 უნივერსიტეტში ფართოდაა გაშლილი სტუდენტთა სამეცნიერო მუშაობა. ყოველწლიურად იმართება სტუდენტთა შემაჯამებელი სამეცნიერო კონფერენციები. 
 
-უნივერსიტეტის კულტურის ცენტრის ბაზაზე შექმნილია სახალხო ანსამბლი “ქართული ფოლკლორი”, პლასტიკისა და მიმიკის თეატრი “იმპრო”, და დრამატული თეატრი “ჰიგია”. განსაკუთრებული პოპულარობით სარგებლობს ახალგაზრდებში მხიარულთა და საზრიანთა კლუბი - ”კოზა- ნოსტრა”.
+უნივერსიტეტის კულტურის ცენტრის ბაზაზე შექმნილია სახალხო ანსამბლი “[[ქართული ფოლკლორი]]”, პლასტიკისა და მიმიკის თეატრი “იმპრო”, და დრამატული თეატრი “[[ჰიგია]]”. განსაკუთრებული პოპულარობით სარგებლობს ახალგაზრდებში მხიარულთა და საზრიანთა კლუბი - ”კოზა- ნოსტრა”.
 
 აღსანიშნავია თსსუ-ის სტუდენტთა სპორტული მიღწევები. სტუდენტები აქტიურად მონაწილეობენ სხვადასხვა სახის ასპარეზობებში საქართველოსა თუ უცხოეთში.
