*Empty MediaWiki Message*

--- a/მედიცინა.mw
+++ b/მედიცინა.mw
@@ -23,6 +23,7 @@
 *[[იმუნოლოგია]] - შეისწავლის ადამიანის იმუნიტეტს	
 *[[კარდიოლოგია]] - შეისწავლის გულის დაავდებებს
 *[[ლოგოპედია]] - შეისწავლის მეტყველების ნაკლს და მის მკურნალობას	
+*[[ნარკოლოგია]] - შეისწავლის ნარკოტიკულ ნივთიერებებს, ადამიანთა მის მიმართ დამოკიდებულებას და  მათ მკურნალობას
 *[[ნეფროლოგია]] - შეისწავლის თირკმლების დაავადებებს
 *[[ონკოლოგია]] - შეისწავლის სიმსივნეებს და მათი მკურნალობის მეთოდებს
 *[[ორთოპედია]] - შეისწავლის ხერხემლისა და კიდურების დეფორმაციას
@@ -31,16 +32,22 @@
 *[[ოფთალმოლოგია]] - შეისწავლის თვალის სნეულებებს და მათ მკურნალობას
 *[[პათოლოგია]] - შეისწავლის ავადმყოფობის პროცესებს 
 *[[პედიატრია]] - შეისწავლის ბავშვთა სნეულებებს
+*[[პროქტოლოგია]] - შეისწავლის ადამიანის უკანალის სნეულებებს და მათ მკურნალობას
+*[[რადიოლოგია]] - ????? 
+*[[რევმატოლოგია]] - ???????
+*[[საოჯახო მედიცინა]] - შეისწავლის ოჯახის ექიმების მომსახურეობას და მათი მომსახურეობის მეთოდებს
 *[[სექსოლოგია]] - შეისწავლის ადამიანის სექსუალური აღზრდის მეთოდებს
 *[[სტომატოლოგია]] - შეისწავლის პირის ღრუს და კბილების დაავადებებს
 *[[ტოქსიკოლოგია]] - შეისწავლის შხამების თვისებებს და მათ ზეგავლენას ორგანიზმზე
 *[[ტრავმატოლოგია]] - შეისწავლის ტრავმულ დაზიანებებს და მათ მკურნალობას
+*[[ტრანსფუზიოლოგია]] - ???????
 *[[ფარმაკოლოგია]] - შეისწავლის სამკურნალო ნივთიერებათა მოქმედებას ორგანიზმზე
 *[[ფარმაცევტიკა]] - იგივეა რაც ფარმაცია
 *[[ფარმაცია]]  - შეისწავლის სამკურნალო საშუალებების მოპოვების, დამუშავების, დამზადების წესებს
 *[[ფიზიოლოგია]] - შეისწავლის ცოცხალი ორგანიზმების სასიცოცხლო ფუნქციებს
 *[[ფსიქიატრია]] - შეისწავლის ფსიქიურ დაავადებებს და მათ მკურნალობას
 *[[ფტიზიატრია]] - შეისწავლის ფილტვების ტუბერკულოზს და მის მკურნალობას
+*[[ფუნდამენტური მედიცინა]] - ???
 *[[ჰემატოლოგია]] - შეისწავლის სისხლის შემადგენლობას, თვისებებს და დაავადებებს
 *[[ჰისტოლოგია]] - შეისწავლის ადამიანის ორგანიზმის ქსოვილთა აგებულებას
 
