--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -2,8 +2,9 @@
 
 თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში [[ინსტიტუტი]]),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში [[ქართული საზოგადოების გამოჩენილი მოღვაწეები]] იდგნენ: [[ჯავახიშვილი, ივანე ]], [[ცხვედაძე, ნიკო ]], [[მელიქიშვილი, პეტრე]], [[თაყაიშვილი, ექვთიმე]], [[კეკელიძე, კორნელი]], [[შანიძე, აკაკი]] [[და სხვა]]. 
 
+==ისტორია==
 [[სურათი:univer_old.jpg|thumb|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
-[[1918]] წლის [[27 თებერვალი]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ ,,[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი გაიყო ცალკეულ ფაკულტეტებად.
+[[1918]] წლის [[27 თებერვალი|27 თებერვალს]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ "[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ|სპირიდონ ვირსალაძის]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი ცალკეულ ფაკულტეტებად გაიყო.
 
 წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
 
@@ -11,16 +12,16 @@
 
 თსსუ-ს  გაფორმებული აქვს ხელშეკრულებები, სხავადასხვა ქვეყნის 30-ზე მეტ უნივერსიტეტთან: 
 
-[[ავსტრია]] – გრაცის სამედიცინო უნივერსიტეტი; ვენის სამედიცინო უნივერსიტეტი
+[[ავსტრია]] – [[გრაცის სამედიცინო უნივერსიტეტი]]; [[ვენის სამედიცინო უნივერსიტეტი]]
 [[აზერბაიჯანი]] – აზერბაიჯანის სახელმწიფო სამედიცინო უნივერსიტეტი
 [[ბელგია]] – ლუვენის კათოლიკური უნივერსიტეტი (ბრუსელი); ლიეჟის უნივერსიტეტი
 [[ბულგარეთი]] – სოფიის სამედიცინო უნივერსიტეტი; ვარნის სამედიცინო უნივერსიტეტი 
 [[გერმანია]] – ფრიდრიხ შილერის სახელობის უნივერსიტეტი (იენა)
-[[ესპანეთი]] – ბარსელონას უნივერსიტეტი 
-[[ინგლისი]] – გლაზგოს უნივერსიტეტი 
-[[ლიტვა]] – კლაიპედეს უნივერსიტეტი (კლაიპედა)
+[[ესპანეთი]] – [[ბარსელონას უნივერსიტეტი]] 
+[[ინგლისი]] – [[გლაზგოს უნივერსიტეტი]] 
+[[ლიტვა]] – [[კლაიპედეს უნივერსიტეტი]] (კლაიპედა)
 [[რუმინეთი]] – სიბიუს უნივერსიტეტი (სიბიუ)
-[[სომხეთი]] – ერევნის სამედიცინო უნივერსიტეტი. 
+[[სომხეთი]] – [[ერევნის სამედიცინო უნივერსიტეტი]]. 
 [[საფრანგეთი]] – მარსელის ხმელთაშუა ზღვის უნივერსიტეტი ექს მარსელი II (მარსელი); ტულუზის [[პედიატრიული]] კლინიკა (ტულუზა); რენე-დეკარტეს უნივერსიტეტი  პარი - 5; ნანტის უნივერსიტეტის სამედიცინო ფაკულტეტი
 [[უკრაინა]] - დონეცკის სახელმწიფო სამედიცინო უნივერსიტეტთან
 [[აშშ]] – სკრენტონის უნივერსიტეტი
@@ -65,3 +66,5 @@
 უნივერსიტეტის კულტურის ცენტრის ბაზაზე შექმნილია სახალხო ანსამბლი “[[ქართული ფოლკლორი]]”, პლასტიკისა და მიმიკის თეატრი “იმპრო”, და დრამატული თეატრი “[[ჰიგია]]”. განსაკუთრებული პოპულარობით სარგებლობს ახალგაზრდებში მხიარულთა და საზრიანთა კლუბი - ”კოზა- ნოსტრა”.
 
 აღსანიშნავია თსსუ-ის სტუდენტთა სპორტული მიღწევები. სტუდენტები აქტიურად მონაწილეობენ სხვადასხვა სახის ასპარეზობებში საქართველოსა თუ უცხოეთში.
+
+[[კატეგორია:საქართველოს უნივერსიტეტები]]
