*Empty MediaWiki Message*

--- a/სიმონ_ხეჩინაშვილი.mw
+++ b/სიმონ_ხეჩინაშვილი.mw
@@ -1,2 +1,9 @@
 [[სურათი:khechinashvili.jpg|thumb|ხეჩინაშვილი სიმონ]]
-აკადემიკოსი, ყბასახის ქირურგი,
+აკადემიკოსი, ყბა-სახის ქირურგი.
+
+
+
+{{ესკიზი}}
+
+
+[[კატეგორია:ქართველები]]
