--- a/განათლება.mw
+++ b/განათლება.mw
@@ -9,7 +9,7 @@
 * ''სკოლამდელი განათლება'': 
 * ''საშუალო განათლება'': [[სკოლა]], [[გიმნაზია]], [[ლიცეუმი]], [[კოლეჯი]].
 * ''უმაღლესი განათლება'': [[ინსტიტუტი]], [[უნივერსიტეტი]], [[აკადემია]].
-
+* ''[[განათლების ერთიანი საკრედიტო კავშირი]]''
 
 ==იხილეთ აგრეთვე==
 
