*Empty MediaWiki Message*

--- a/ინსტიტუტი.mw
+++ b/ინსტიტუტი.mw
@@ -1,1 +1,19 @@
-საქართველოში არსებული ინსტიტუტების სია დასამატებელია!
+ტერმინი '''ინსტიტუტი''' (ლათ. institutum  - დაწესებულება ან ჩვევა) რაიმე პერმანენტულ ორგანიზაციულ შენაერთზე მიუთითებს, რომელიც გარკვეული დანიშნულებისა და მიზნის განხორციელებისთვის შეიქმნა. ხშირად ეს კვლევითი ორგანიზაციაა, რომელიც რაიმე საგნის ან საკითხის შესწავლა/ძიებისთვის შეიქმნა გარკვეულ სფეროში.
+
+ტერმინი [[ლათინური ენა|ლათინური]] სიტყვიდან instituere მომდინარეობს და ნიშნავს შენებას, შექმნას, გაზრდასა და სწავლებას.
+
+{{ესკიზი}}
+==იხ. აგრეთვე==
+*[[კონსორციუმი]]
+*[[კვლევითი ინსტიტუტი]]
+
+
+[[კატეგორია:ტერმინები]]
+[[კატეგორია:განათლება]]
+
+[[de:Institut]]
+[[en:Institute]]
+[[fr:Institut]]
+[[lt:Institutas]]
+[[no:Institutt]]
+[[ru:Институт]]
