*Empty MediaWiki Message*

--- a/კოლეჯი.mw
+++ b/კოლეჯი.mw
@@ -1,1 +1,19 @@
-საქართველოში კოლეჯების სია განათლების სამინისტროს ვთხოვთ ჩადოთ..
+ტერმინი '''კოლეჯი''' ([[ლათინური ენა|ლათ.]] collegium) ამჟამად ხშირად საგანმანათლებლო დაწესებულებაზე მიუთითებს. უფრო ვრცელი გაგებით, ეს შეიძლება იყო რაიმე პროფესიის კოლეგთა ჯგუფის სახელი (მაგ. საარჩევნო კოლეგია, სამხედრო კოლეგია, და ა.შ.). თავდაპირველად ის აღნიშნავდა საერთო კანონებით ერთად მცხოვრებ ადამიანთა ჯგუფს (con-, "ერთად" + leg-, "კანონი"). 
+
+
+{{ესკიზი}}
+[[კატეგორია:ტერმინები]]
+[[კატეგორია:განათლება]]
+
+[[da:Seminarium]]
+[[de:College]]
+[[en:College]]
+[[es:College]]
+[[fr:Collège]]
+[[ja:単科大学]]
+[[yi:קאלעדזש]]
+[[nl:Hogeschool]]
+[[pl:college]]
+[[pt:Faculdade]]
+[[sv:College]]
+[[th:วิทยาลัย]]
